# data-platform-naming

./: .gitignore  .mega-linter.yml  coverage.xml  databricks.yml  prod.json  pyproject.toml  readme.md  test_baseline.txt
.claude/: settings.local.json
blueprints/: README.md
configs/: naming-patterns.yaml
docs/: aws-data-platform-resource-naming-doc.md  aws-data-platform-resource-naming-spec.md  aws-naming-guide.md  configuration-migration-guide.md  de-ergonomics-naming-tools.md  troubleshooting.md
examples/blueprints/: dev-aws-only.json  dev-no-clusters.json  dev.json  prd.json  stg.json
examples/configs/: naming-patterns.yaml  naming-values.yaml
examples/pipelines/: dlt-expectations-pipeline.py  dlt_phi_deid.py  dlt_pipeline.json  main.tf  outputs.tf  variables.tf
examples/schemas/: README.md  naming-patterns-schema.json  naming-values-schema.json
memory-bank/: activeContext.md  code-review-findings.md  productContext.md  progress.md  projectbrief.md  sprint2-implementation-plan.md  systemPatterns.md  techContext.md
schemas/: naming-patterns-schema.json  naming-values-schema.json
src/data-platform-naming/: cli.py  databricks_naming.py  validators_py.py
src/data-platform-naming/crud/: databricks_operations.py  transaction_manager.py
src/data_platform_naming/: aws_naming.py  cli.py  constants.py  dbx_naming.py  exceptions.py  types.py  validators.py
src/data_platform_naming/config/: __init__.py  configuration_manager.py  naming_patterns_loader.py  naming_values_loader.py  scope_filter.py
src/data_platform_naming/crud/: aws_operations.py  dbx_operations.py  transaction_manager.py
src/data_platform_naming/plan/: blueprint.py
tests/: test_aws_naming.py  test_blueprint_scope.py  test_cli_integration.py  test_cli_validation.py  test_config_init_interactive.py  test_config_schemas.py  test_configuration_manager.py  test_dbx_naming.py  test_integration_e2e.py  test_naming_patterns_loader.py  test_naming_values_loader.py  test_scope_filter.py
